--- a/menu.html
+++ b/menu.html
@@ -71,8 +71,8 @@
           <img class="card-img-top img-fluid rounded" src="assets\img\Menu\maddi-bazzocco.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title ubuntuM">Menu A</h5>
-            <p class="card-text ubuntuL">Un menu comprenant uniquement des produits venus de la mer. Absolument tous les ingrédients de ce menu viennent de milieux aquatiques!<span><i class="fas fa-fish"></i></span><span><i class="fas fa-fish"></i></span><span><i
-                  class="fas fa-fish"></i></span></p>
+            <p class="card-text ubuntuL">Un menu comprenant uniquement des produits venus de la mer. Absolument tous les ingrédients de ce menu viennent de milieux aquatiques!<span><i class="fas fa-fish">
+            </i></span><span><i class="fas fa-fish"></i></span><span><i class="fas fa-fish"></i></span></p>
             <p class="card-text bottomOfDiv"><small class="text-muted">Image Credit: Maddi Bazzocco</small></p>
           </div>
         </div>
@@ -83,7 +83,8 @@
           <img class="card-img-top img-fluid rounded" src="assets\img\Menu\eiliv-sonas-aceron.jpg" alt="Plusieurs épices avec un assortiment de nouiles.">
           <div class="card-body">
             <h5 class="card-title ubuntuM">Menu B</h5>
-            <p class="card-text ubuntuL">Assortiment de différentes nouilles aux choix avec des tonnes d'épices ultra-piquantes.<span><i class="fas fa-bomb"></i></span><span><i class="fas fa-bomb"></i></span><span><i class="fas fa-bomb"></i></span></p>
+            <p class="card-text ubuntuL">Assortiment de différentes nouilles aux choix avec des tonnes d'épices ultra-piquantes.
+              <span><i class="fas fa-bomb"></i></span><span><i class="fas fa-bomb"></i></span><span><i class="fas fa-bomb"></i></span></p>
             <p class="card-text bottomOfDiv"><small class="text-muted align-text-bottom">Image Credit: Eiliv Sonas Aceron</small></p>
           </div>
         </div>
@@ -94,8 +95,8 @@
           <img class="card-img-top img-fluid rounded" src="assets\img\Menu\quôc-trung.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title ubuntuM">Menu C</h5>
-            <p class="card-text ubuntuL">Un menu constitué uniquement de viandes d'animaux fantastiques, ou en voie d'extinction. Soupe à la licorne, steak de dragon et autres.<span><i class="fas fa-dragon"></i></span><span><i class="fas fa-horse"></i></span><span><i
-                  class="fas fa-kiwi-bird"></i></span></p>
+            <p class="card-text ubuntuL">Un menu constitué uniquement de viandes d'animaux fantastiques, ou en voie d'extinction. Soupe à la licorne, steak de dragon et autres.
+              <span><i class="fas fa-dragon"></i></span><span><i class="fas fa-horse"></i></span><span><i class="fas fa-kiwi-bird"></i></span></p>
             <p class="card-text bottomOfDiv"><small class="text-muted align-items-end">Image Credit: Quôc Trung</small></p>
           </div>
         </div>
