--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/CSS/master.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
   <title>JoJo's</title>
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
@@ -63,66 +64,77 @@
   <!-- IMAGE GALLERY -->
   <section>
     <div class="container my-5 transbox rounded">
-<!-- FIRST ROW -->
+      <!-- FIRST ROW -->
       <div class="row">
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="img-fluid rounded" src="assets\img\Photo Gallery\artur-rutkowski.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\artur-rutkowski.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\artur-rutkowski.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Nouilles fraîches."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Artur Rutkowski</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="img-fluid rounded" src="assets\img\Photo Gallery\chi-pham.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\chi-pham.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\chi-pham.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Soupe délicate."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Chi Pham</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="img-fluid rounded" src="assets\img\Photo Gallery\jennifer-schmidt.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\jennifer-schmidt.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\jennifer-schmidt.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Tanburi."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Jennifer Schmidt</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="img-fluid rounded" src="assets\img\Photo Gallery\filippo-faruffini.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\filippo-faruffini.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\filippo-faruffini.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Super sushi!"</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Filippo Faruffini</figcaption>
         </div>
       </div>
-<!-- SECOND ROW -->
+      <!-- SECOND ROW -->
       <div class="row">
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\dominik-vanyi.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\dominik-vanyi.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\dominik-vanyi.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Notre porte d'entrée."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Dominik Vanyi</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\jj-ying.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\jj-ying.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\jj-ying.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Rue d'un de nos restaurants."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: J.J. Ying</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\joshua-hoehne.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\joshua-hoehne.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\joshua-hoehne.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Spring Rolls!"</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Joshua Hoehne</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\juan-encalada.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\juan-encalada.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\juan-encalada.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Gourmet food."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Juan Encalada</figcaption>
         </div>
       </div>
-<!-- THIRD ROW -->
+      <!-- THIRD ROW -->
       <div class="row">
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\liam-macleod.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\liam-macleod.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\liam-macleod.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Un des marchés pour nos ingrédients."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Liam McLeod</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\wai-austin.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\wai-austin.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\wai-austin.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"La rue pour un autre de nos restaurants."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Wai Austin</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <img class="smallImg img-fluid rounded" src="assets\img\Photo Gallery\yuxiang-zhang.jpg" alt="">
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\yuxiang-zhang.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\yuxiang-zhang.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Gyoza madness."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: YuXiang Zhang</figcaption>
         </div>
@@ -133,7 +145,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
   <script type="text/javascript" src="assets/JS/js.js"></script>
+  <script type="text/javascript" src="assets/JS/lightbox.js"></script>
 </body>
 
 </html>
