--- a/bootstrap.html
+++ b/bootstrap.html
@@ -33,7 +33,7 @@
   <div class="container-fluid transbox2 fixed-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html"><img src="assets/img/indexPics/jotaro.png" width="30" height="35" class="d-inline-block align-top" alt=""><span class="big-font">JoJo's Bizarre Cuisine</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-sitemap"></i>
         </span>
@@ -61,15 +61,14 @@
   </div>
 
   <!-- OPEN - NOT OPEN JAVASCRIPT EVENT LISTENER-->
-  <div class="transbox">
-    <div id="target">
-    </div>
+  <div class="my-4 container-fluid text-center transbox">
+    <h4 class=" ubuntuB text-white h1-responsive text-center">Bienvenue, <span id="promptname"></span> !</h4>
   </div>
 
   <!-- BANNER -->
   <div class="my-5 transbox jumbotron text-center">
-    <img class="img-responsive img-fluid rounded mx-auto d-block" src="assets/img/indexPics/jotaro.png" width=75px height=75px alt="">
-    <h1 class="alex h1-responsive text-warning font-weight-bold text-center my-1">JoJo's Bizarre Cuisine</h1>
+    <img id="img" class="img-responsive img-fluid rounded mx-auto d-block" src="assets/img/indexPics/jotaro.png" width=75px height=75px alt="">
+    <h1 id="jojo" class="alex h1-responsive text-warning font-weight-bold text-center my-1">JoJo's Bizarre Cuisine</h1>
   </div>
 
   <!-- Découvrez notre restaurant -->
