--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/CSS/master.css">
-  <title>JoJo's</title>
+  <title>Menu</title>
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
@@ -33,7 +33,7 @@
   <div class="container-fluid transbox2 fixed-top ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html"><img src="assets/img/indexPics/jotaro.png" width="30" height="35" class="d-inline-block align-top" alt=""><span class="big-font">JoJo's Bizarre Cuisine</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expandeded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-sitemap"></i>
         </span>
@@ -109,7 +109,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Entrées</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#entreeToggler" aria-controls="entreeToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#entreeToggler" aria-controls="entreeToggler" aria-expandeded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bone"></i>
         </span>
@@ -146,7 +146,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Plats</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#platsToggler" aria-controls="platsToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#platsToggler" aria-controls="platsToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bacon"></i>
         </span>
@@ -183,7 +183,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Boîtes Bento</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bentoToggler" aria-controls="bentoToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bentoToggler" aria-controls="bentoToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-box"></i>
         </span>
@@ -220,7 +220,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Sushi</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sushiToggler" aria-controls="sushiToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sushiToggler" aria-controls="sushiToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bullseye"></i>
         </span>
@@ -257,7 +257,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Desserts</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dessertsToggler" aria-controls="dessertsToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dessertsToggler" aria-controls="dessertsToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-ice-cream"></i>
         </span>
@@ -294,7 +294,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Boissons non-alcoolisées</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#drinksToggler" aria-controls="drinksToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#drinksToggler" aria-controls="drinksToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-mug-hot"></i>
         </span>
@@ -331,7 +331,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Alcools & Spiritueux</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#alcoholToggler" aria-controls="alcoholToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#alcoholToggler" aria-controls="alcoholToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-wine-glass-alt"></i>
         </span>
