--- a/restaurants.html
+++ b/restaurants.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/CSS/master.css">
-  <title>JoJo's</title>
+  <title>Restaurants</title>
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
@@ -33,7 +33,7 @@
   <div class="container-fluid transbox2 fixed-top ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html"><img src="assets/img/indexPics/jotaro.png" width="30" height="35" class="d-inline-block align-top" alt=""><span class="big-font">JoJo's Bizarre Cuisine</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-sitemap"></i>
         </span>
@@ -59,12 +59,60 @@
       </div>
     </nav>
   </div>
+  <!-- MY RESTAURANTS -->
 
+    <!-- JoJo's -->
+    <div class="col-12 col-md-12 col-lg-6 my-5 mx-auto">
+      <div class="card text-white bg-dark mb-3">
+        <div class="map-responsive rounded">
+          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Cantersteen%2010%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title ubuntuM">JoJo's Bizarre Cuisine</h5>
+          <p class="card-text ubuntuL">Cantersteen 10, 1000 Bruxelles</p>
+          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+          <p id="ef"></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Kakyoin's -->
+    <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
+      <div class=" h-100 card text-white bg-dark mb-3">
+        <div class="map-responsive rounded">
+          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20du%20Pont%20de%20la%20Carpe%207%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title ubuntuM">Kakyoin's Bizarre Cuisine</h5>
+          <p class="card-text ubuntuL">Rue du Pont de la Carpe 7, 1000 Bruxelles</p>
+          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Avdol's -->
+    <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
+      <div class=" h-100 card text-white bg-dark mb-3">
+        <div class="map-responsive rounded">
+          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20Jules%20Van%20Praet%2013%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title ubuntuM">Avdol's Bizarre Cuisine</h5>
+          <p class="card-text ubuntuL">Rue Jules Van Praet 13, 1000 Bruxelles</p>
+          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script type="text/javascript" src="assets/JS/js.js"></script>
+  <script type="text/javascript" src="assets/JS/time.js"></script>>
+
+  </script>
 </body>
 
 </html>
