--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/CSS/master.css">
-  <title>JoJo's</title>
+  <title>Contact</title>
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
@@ -33,7 +33,7 @@
   <div class="container-fluid transbox2 fixed-top ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html"><img src="assets/img/indexPics/jotaro.png" width="30" height="35" class="d-inline-block align-top" alt=""><span class="big-font">JoJo's Bizarre Cuisine</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expand="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-sitemap"></i>
         </span>
@@ -117,7 +117,7 @@
             <div class="col-md-12 col-12 col-lg-12 text-center">
               <button type="button" class="btn btn-success btn-send">
           <span><i class="fas fa-arrow-right"></i></span>  Envoyer  <span><i class="fas fa-arrow-left"></i></span>
-          <!-- BOOTSTRAP 4 DOES NOT SUPPORT GLYPHICONS ANYMORE -->
+          <!-- JEAN - BOOTSTRAP 4 DOES NOT SUPPORT GLYPHICONS ANYMORE -->
         </button>
             </div>
           </div>
