--- a/photos.html
+++ b/photos.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="lead nav-link text-warning ubuntuM" href="bootstrap.html">Accueil</a>
+            <a class="lead nav-link text-warning ubuntuM" href="index.html">Accueil</a>
           </li>
           <li class="nav-item">
             <a class="lead nav-link text-warning ubuntuM" href="menu.html">La Carte</a>
