Added 2 lines of code

--- a/restaurants.html
+++ b/restaurants.html
@@ -33,7 +33,7 @@
   <div class="container-fluid transbox2 fixed-top ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html"><img src="assets/img/indexPics/jotaro.png" width="30" height="35" class="d-inline-block align-top" alt=""><span class="big-font">JoJo's Bizarre Cuisine</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler col-5 mx-auto py-3" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-sitemap"></i>
         </span>
@@ -61,48 +61,53 @@
   </div>
   <!-- MY RESTAURANTS -->
 
-    <!-- JoJo's -->
-    <div class="col-12 col-md-12 col-lg-6 my-5 mx-auto">
-      <div class="card text-white bg-dark mb-3">
-        <div class="map-responsive rounded">
-          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Cantersteen%2010%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title ubuntuM">JoJo's Bizarre Cuisine</h5>
-          <p class="card-text ubuntuL">Cantersteen 10, 1000 Bruxelles</p>
-          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
-          <p id="ef"></p>
-        </div>
+  <!-- JoJo's -->
+  <div class="col-12 col-md-12 col-lg-6 my-5 mx-auto">
+    <div class="card text-white bg-dark mb-3">
+      <div class="map-responsive rounded">
+        <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Cantersteen%2010%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no"
+          marginheight="0" marginwidth="0"></iframe>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title ubuntuM">JoJo's Bizarre Cuisine</h5>
+        <p class="card-text ubuntuL">Cantersteen 10, 1000 Bruxelles</p>
+        <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+        <p class="ef"></p>
       </div>
     </div>
+  </div>
 
-    <!-- Kakyoin's -->
-    <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
-      <div class=" h-100 card text-white bg-dark mb-3">
-        <div class="map-responsive rounded">
-          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20du%20Pont%20de%20la%20Carpe%207%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title ubuntuM">Kakyoin's Bizarre Cuisine</h5>
-          <p class="card-text ubuntuL">Rue du Pont de la Carpe 7, 1000 Bruxelles</p>
-          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
-        </div>
+  <!-- Kakyoin's -->
+  <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
+    <div class=" h-100 card text-white bg-dark mb-3">
+      <div class="map-responsive rounded">
+        <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20du%20Pont%20de%20la%20Carpe%207%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed"
+          frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title ubuntuM">Kakyoin's Bizarre Cuisine</h5>
+        <p class="card-text ubuntuL">Rue du Pont de la Carpe 7, 1000 Bruxelles</p>
+        <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+        <p class="ef"></p>
       </div>
     </div>
+  </div>
 
-    <!-- Avdol's -->
-    <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
-      <div class=" h-100 card text-white bg-dark mb-3">
-        <div class="map-responsive rounded">
-          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20Jules%20Van%20Praet%2013%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title ubuntuM">Avdol's Bizarre Cuisine</h5>
-          <p class="card-text ubuntuL">Rue Jules Van Praet 13, 1000 Bruxelles</p>
-          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
-        </div>
+  <!-- Avdol's -->
+  <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
+    <div class=" h-100 card text-white bg-dark mb-3">
+      <div class="map-responsive rounded">
+        <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20Jules%20Van%20Praet%2013%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0"
+          scrolling="no" marginheight="0" marginwidth="0"></iframe>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title ubuntuM">Avdol's Bizarre Cuisine</h5>
+        <p class="card-text ubuntuL">Rue Jules Van Praet 13, 1000 Bruxelles</p>
+        <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+        <p class="ef"></p>
       </div>
     </div>
+  </div>
   </div>
   <!-- END -->
 
