--- a/menu.html
+++ b/menu.html
@@ -109,7 +109,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Entrées</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#entreeToggler" aria-controls="entreeToggler" aria-expandeded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#entreeToggler" aria-controls="entreeToggler" aria-expandeded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bone"></i>
         </span>
@@ -146,7 +146,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Plats</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#platsToggler" aria-controls="platsToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#platsToggler" aria-controls="platsToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bacon"></i>
         </span>
@@ -183,7 +183,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Boîtes Bento</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bentoToggler" aria-controls="bentoToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#bentoToggler" aria-controls="bentoToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-box"></i>
         </span>
@@ -220,7 +220,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Sushi</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sushiToggler" aria-controls="sushiToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#sushiToggler" aria-controls="sushiToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bullseye"></i>
         </span>
@@ -257,7 +257,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Desserts</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dessertsToggler" aria-controls="dessertsToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#dessertsToggler" aria-controls="dessertsToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-ice-cream"></i>
         </span>
@@ -294,7 +294,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Boissons non-alcoolisées</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#drinksToggler" aria-controls="drinksToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#drinksToggler" aria-controls="drinksToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-mug-hot"></i>
         </span>
@@ -331,7 +331,7 @@
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
         <span class="big-font">Alcools & Spiritueux</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#alcoholToggler" aria-controls="alcoholToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#alcoholToggler" aria-controls="alcoholToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-wine-glass-alt"></i>
         </span>
